[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ShipPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/playerShip1_orange.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 38.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 31.3209

[node name="ShipPlayer" type="KinematicBody2D"]
z_index = 100
collision_layer = 512
collision_mask = 2147484160
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2147484416
collision_mask = 768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ShotPos1" type="Position2D" parent="."]
position = Vector2( 0, -33.744 )

[node name="ShootColdown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
